# str_cirugia

./: .gitignore  EC2 SSL.txt  Home.py  config.yaml  cred_file.py  encryp_st.py  encrypt_json.py  main.py  mongo_mod.py  monty_mod.py  pdf_temp.py  pyproject.toml  pyson_db.py  qmod.py  requirements.txt  str_auth.py  systectl_instructions.txt  table_update.py  template.py  test.py  test2.py  update_app.sh  uptdate_app.sh
.streamlit/: .gitignore  config.toml  secrets.toml.default
Pages/: Solicitar.py
data/: 202209enc.json  202209tabelas.json  202301enc.json  202301tabelas.json
modules/: cred_file.py  mongo_mod.py  qmod.py  template.py
pages/: 1_Receitas.py  2_Exames.py  3_Atestados.py  4_Laudos.py  4_Laudos_e_Orientações.py  5_Termos.py  6_Cadastro.py  6_Internação.py  6_TUSS.py  7_Guia_Internação.py  7_Imposto.py  8_Cadastro.py  8_Imposto.py  9_Tabelas.py  About.py  Receitas.py
scr/imagem/: imagem.txt
scr/labs/: Labs.txt
scr/laudos/: Orientações Otoplastia.txt
scr/outros/: Termo Geral.txt
scr/receitas/: 1.txt  2.txt  Atestado.txt  Bichectomia.txt  Enoxaparina.txt  Pós-Op.txt  Tylex.txt  Órtese Umbigo.txt
scr/termos/: Blefaroplastia.txt  Braquioplastia.txt  Cirurgia oncologica.txt  Lipoescultura.txt  Mamoplastia.txt  Mastopexia com Prótese.txt  Prótese Mamária.txt  Retirada de Prótese.txt  Revisão Cicatriz.txt  Termo Geral.txt
src/: AMB TUSS ORDENADA.xlsx
src/atestados/: Atestado.txt  Decl Acomp.txt  Declaração.txt
src/aval/: aval.txt
src/cardio/: cardio.txt
src/labs/: Labs.txt
src/laudos/: Orientações Blefaro.txt  Orientações Pós-op.txt  (+1 more)
(+37 files in other folders)
